--- a/application/build.gradle
+++ b/application/build.gradle
@@ -28,6 +28,7 @@ dependencies {
 
     implementation 'com.android.support:appcompat-v7:28.0.0-alpha3'
     implementation 'com.android.volley:volley:1.0.0'
+    implementation 'com.google.code.gson:gson:2.8.1'
 
     implementation project(":domain")
 }
