--- a/application/src/main/AndroidManifest.xml
+++ b/application/src/main/AndroidManifest.xml
@@ -1,9 +1,6 @@
-<manifest
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="wetickets.wescanapp.application">
 
-    <application
-        android:name="BackendVolley">
-    </application>
+    <application android:name="BackendVolley"></application>
 
 </manifest>
