--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -26,10 +26,12 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'com.android.support:appcompat-v7:28.0.0-alpha3'
     implementation 'com.android.support.constraint:constraint-layout:1.1.2'
 
     implementation project(":domain")
     implementation project(":data")
+    implementation project(":application")
 }
