--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'java-library'
 apply plugin: 'kotlin'
+apply plugin: 'kotlin-kapt'
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
@@ -10,7 +11,7 @@ dependencies {
 sourceCompatibility = "1.8"
 targetCompatibility = "1.8"
 buildscript {
-    ext.kotlin_version = '1.2.50'
+    ext.kotlin_version = '1.2.51'
     repositories {
         mavenCentral()
     }
